[GOHW-8] final commit
