# loms/internal/generated/api/loms/v1/loms.pb.validate.go
@@ -123,6 +123,17 @@ func (m *Order) validate(all bool) error {
 
 	}
 
+	if m.GetId() <= 0 {
+		err := OrderValidationError{
+			field:  "Id",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
 	if len(errors) > 0 {
 		return OrderMultiError(errors)
 	}
@@ -1246,3 +1257,137 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = StocksInfoResponseValidationError{}
+
+// Validate checks the field values on OrderAllResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *OrderAllResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on OrderAllResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// OrderAllResponseMultiError, or nil if none found.
+func (m *OrderAllResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *OrderAllResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetOrders() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, OrderAllResponseValidationError{
+						field:  fmt.Sprintf("Orders[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, OrderAllResponseValidationError{
+						field:  fmt.Sprintf("Orders[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return OrderAllResponseValidationError{
+					field:  fmt.Sprintf("Orders[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return OrderAllResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// OrderAllResponseMultiError is an error wrapping multiple validation errors
+// returned by OrderAllResponse.ValidateAll() if the designated constraints
+// aren't met.
+type OrderAllResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m OrderAllResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m OrderAllResponseMultiError) AllErrors() []error { return m }
+
+// OrderAllResponseValidationError is the validation error returned by
+// OrderAllResponse.Validate if the designated constraints aren't met.
+type OrderAllResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e OrderAllResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e OrderAllResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e OrderAllResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e OrderAllResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e OrderAllResponseValidationError) ErrorName() string { return "OrderAllResponseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e OrderAllResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sOrderAllResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = OrderAllResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = OrderAllResponseValidationError{}
